created custormer review section ✏️

--- a/index.html
+++ b/index.html
@@ -125,6 +125,67 @@
         </div>
     </div>
  </section>
+
+ <!--custormers-->
+ <section class="custormers" id="custormers">
+    <div class="heading">
+        <h2>Our Custormer's</h2>
+    </div>
+    <!--container-->
+    <div class="custormers-container">
+        <div class="box">
+            <div class="stars">
+                <i class='bx  bxs-star'    ></i> 
+                <i class='bx  bxs-star'    ></i>
+                <i class='bx  bxs-star'    ></i>
+                <i class='bx  bxs-star'    ></i>
+                <i class='bx  bxs-star-half'    ></i>                   
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis minima porro error perferendis deleniti. Molestiae nam corporis culpa fuga? Non itaque eaque maiores sapiente mollitia, officiis libero veritatis illo facilis.</p>
+            <h2>Jhon Doyili</h2>
+            <img src="img/rev1.jpg" alt="">
+        </div>
+
+        <div class="box">
+            <div class="stars">
+               <i class='bx  bxs-star'    ></i> 
+               <i class='bx  bxs-star'    ></i>
+               <i class='bx  bxs-star'    ></i>
+               <i class='bx  bxs-star'    ></i>
+               <i class='bx  bxs-star-half'    ></i>                   
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis minima porro error perferendis deleniti. Molestiae nam corporis culpa fuga? Non itaque eaque maiores sapiente mollitia, officiis libero veritatis illo facilis.</p>
+            <h2>Hendry Hary</h2>
+            <img src="img/rev2.jpg" alt="">
+        </div>
+
+        <div class="box">
+            <div class="stars">
+               <i class='bx  bxs-star'    ></i> 
+               <i class='bx  bxs-star'    ></i>
+               <i class='bx  bxs-star'    ></i>
+               <i class='bx  bxs-star'    ></i>
+               <i class='bx  bxs-star-half'    ></i>                  
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis minima porro error perferendis deleniti. Molestiae nam corporis culpa fuga? Non itaque eaque maiores sapiente mollitia, officiis libero veritatis illo facilis.</p>
+            <h2>Anne Kane</h2>
+            <img src="img/rev3.jpg" alt="">
+        </div>
+    </div>
+ </section>
+
+ <!--footer section-->
+ <section class="footer">
+    <div class="footer-box">
+        <h3>Coffee shop</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor architecto earum quis porro blanditiis quasi deleniti incidunt officiis libero? Ratione assumenda et facere doloribus quo sit cupiditate dolorem? Rem, a?</p>
+        <div class="social">
+            <a href="#"><i class='bx bxl-facebook-circle'></i></a>
+            <a href="#"><i class='bx bxl-twitter' ></i></a>
+            <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
+        </div>
+    </div>
+ </section>
   <script src="script.js"></script>
 </body>
 </html>
