created footer section ✏️

--- a/index.html
+++ b/index.html
@@ -183,6 +183,33 @@
             <a href="#"><i class='bx bxl-facebook-circle'></i></a>
             <a href="#"><i class='bx bxl-twitter' ></i></a>
             <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
+             <a href="#"> <i class='bx bxl-tiktok' ></i></a>
+        </div>
+    </div>
+
+    <div class="footer-box">
+        <h3>Support</h3>
+        <li><a href="#">Products</a></li>
+        <li><a href="#">Help & Support</a></li>
+        <li><a href="#">Return Policy</a></li>
+        <li><a href="#">Terms of Use</a></li>
+        <li><a href="#">Products</a></li>
+    </div>
+
+    <div class="footer-box">
+        <h3>View Guides</h3>
+        <li><a href="#">Features</a></li>
+        <li><a href="#">Careers</a></li>
+        <li><a href="#">Blog Post</a></li>
+        <li><a href="#">Our Branches</a></li>
+    </div>
+
+    <div class="footer-box">
+        <h3>Contact</h3>
+        <div class="contact">
+            <span><i class='bx bx-map' ></i>High Level Road, Homagama Pitipana</span>
+            <span><i class='bx bx-phone' ></i>+94 75 574-895</span>
+            <span><i class='bx bx-envelope' ></i>Coffeeshop@gmail.com</span>
         </div>
     </div>
  </section>
